# djbookshelf

./: .editorconfig  .env  .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  codecov.yml  makefile  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml  pages_mkdocs.yml
djbookshelf/: apps.py  exceptions.py  models.py  urls.py  utility.py
djbookshelf/migrations/: 0001_initial.py  0002_auto_20211228_2239.py
djbookshelf/models/: __init__.py  author.py  book.py  isbn.py  language.py  publisher.py
djbookshelf/templates/djbookshelf/: core.html
djbookshelf/tests/: __init__.py  utility_test.py
docs/: index.md
src_docs/: index.md  requirements.txt
tests/: settings.py  test_utility.py  urls.py
tests/models/: test_isbn.py
