[tool.poetry]
name = "djbookshelf"
version = "0.1.0"
description = ""
authors = ["Fundor333 <fundor333@fundor333.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.0"
requests = "^2.26.0"
tox = "^3.24.4"

[tool.poetry.dev-dependencies]
gunicorn = "^20.1.0"
pylint = "^2.12.2"
pylint-django = "^2.4.4"
skjold = "^0.4.1"
pre-commit = "^2.16.0"
mkdocs = "^1.2.3"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.skjold]
sources = ["github", "pyup", "gemnasium"]  # Sources to check against.
report_only = true                         # Report only, always exit with zero.
cache_dir = '.skylt_cache'                 # Cache location (default: `~/.skjold/cache`).
cache_expires = 86400                      # Cache max. age.
verbose = true                             # Be verbose.


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
