[tool.poetry]
name = "djbookshelf"
version = "0.1.4"
description = ""
authors = ["Fundor333 <fundor333@fundor333.com>"]

homepage = "https://djbookshelf.readthedocs.io/en/latest/"
repository = "https://github.com/fundor333/djbookshelf"
license = "MIT"
readme = "README.md"

keywords = ["django", "book"]

classifiers = [
    'License :: OSI Approved :: MIT License',
    "Development Status :: 4 - Beta",
]

[tool.poetry.dependencies]
python = "^3.7"
django = ">=3.2,<5"
requests = "^2"
django-bootstrap-v5 = "^1.0.7"
isbnlib = "^3.10.9"

[tool.poetry.dev-dependencies]
gunicorn = "^20.1.0"
pylint = "^2.12.2"
pylint-django = "^2.4.4"
skjold = "^0.4.1"
pre-commit = "^2.16.0"
mkdocs = "^1.2.3"
tox = "^3.24.4"
coverage = "^6.2"
mkdocs-material = "^8.1.3"
pymdown-extensions = "^9.1"
diagrams = "^0.20.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.skjold]
sources = ["github", "pyup", "gemnasium"]  # Sources to check against.
report_only = true                         # Report only, always exit with zero.
cache_dir = '.skylt_cache'                 # Cache location (default: `~/.skjold/cache`).
cache_expires = 86400                      # Cache max. age.
verbose = true                             # Be verbose.


[build-system]
requires = ["poetry>=0.12","setuptools >= 40.6.0", "wheel"]
build-backend = "poetry.masonry.api"
